<resources>
    <string name="app_name">Waves Wellness</string>

    <string-array name="programms_array">
        <item>Rejuvenate</item>
        <item>De-Stress</item>
        <item>Detox</item>
        <item>Pain</item>
        <item>Joy</item>
        <item>Micro Organisms</item>
        <item>Organ Support</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="alipay">Ali-pay</string>
    <string name="wechatpay">Wechat-pay</string>
    <string name="paypal">Paypal</string>
    <string name="buy_me_a_coffee">Buy me a coffee,thanks</string>
</resources>